[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dirsearch"
version = "0.4.3"
description = "Advanced web path scanner"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Mauro Soria", email = "maurosoria@protonmail.com" },
]
keywords = ["infosec", "bug bounty", "pentesting", "security"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "PySocks>=1.7.1",
    "Jinja2>=3.1.6",
    "defusedxml>=0.7.1",
    "pyopenssl>=25.3.0",
    "requests>=2.32.5",
    "requests-ntlm>=1.3.0",
    "colorama>=0.4.6",
    "ntlm-auth>=1.5.0",
    "beautifulsoup4>=4.14.3",
    "mysql-connector-python>=9.5.0",
    "psycopg[binary]>=3.3.2",
    "defusedcsv>=3.0.0",
    "requests-toolbelt>=1.0.0",
    "setuptools>=80.9.0",
    "httpx>=0.28.1",
    "httpx-ntlm>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/maurosoria/dirsearch"
Repository = "https://github.com/maurosoria/dirsearch"

[project.scripts]
dirsearch = "dirsearch:main"

[tool.hatch.build.targets.wheel]
packages = ["lib", "db"]
artifacts = ["config.ini", "db/*"]

[tool.hatch.build.targets.wheel.force-include]
"dirsearch.py" = "dirsearch.py"
"__init__.py" = "__init__.py"
"config.ini" = "config.ini"

[tool.hatch.build.targets.sdist]
include = [
    "lib/",
    "db/",
    "dirsearch.py",
    "__init__.py",
    "config.ini",
    "README.md",
    "requirements.txt",
    "testing.py",
    "tests/",
    "pyproject.toml",
]

[tool.codespell]
skip = "./.git,./db/dicc.txt,./static"
