[codespell]
skip = ./.git,./db/dicc.txt,./static

[flake8]
count = True
ignore = E501,E701,F403,F405,F524,W503
show-source = True
statistics = True

[metadata]
description-file = README.md

# Source - https://stackoverflow.com/questions/49689880/proper-way-to-parse-requirements-file-after-pip-upgrade-to-pip-10-x-x
# Posted by sinoroc, modified by community. See post 'Timeline' for change history
# Retrieved 2026-01-23, License - CC BY-SA 4.0

[options]
install_requires = file: requirements.txt
